--- a/project.html
+++ b/project.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styles.css">
-    <title>Did They Say It?</title>
-    <meta charset="utf-8">
-    
-    <body>
+<link rel="stylesheet" href="styles.css">
+<title>Did They Say It?</title>
+<meta charset="utf-8">
+
+<body>
     <div>
-    <header><h1>Did They Say It?</h1></header>
-    <img src="images/homer.png"/>
-        <div id="quoteId">
+        <header>
+            <h1>Did They Say It?</h1>
+        </header>
+        <img src="images/homer.png" />
+        <div id="quoteId">      <!--- use class or id to change pages (like homepage) + images -->
             <form>
-                <input type="button"> Yes </button>
+                <input type="button"> Yes </button> <!--- do radio buttons -->
                 <input type="button"> No </button>
             </form>
         </div>
     </div>
     <script src="functions.js"></script>
-    </body>
+</body>
+
 </html>
