--- a/project.html
+++ b/project.html
@@ -9,7 +9,9 @@
         <header>
             <h1>Did They Say It?</h1>
         </header>
-        <img src="images/homer.png" />
+        <div class="firstPage">
+
+        </div>
         <div id="quoteId">      <!--- use class or id to change pages (like homepage) + images -->
             <form>
                 <input type="button"> Yes </button> <!--- do radio buttons -->
