updated json and parsed it

--- a/project.html
+++ b/project.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="styles.css">
-<title>Did They Say It?</title>
-<meta charset="utf-8">
-
+<head>
+    <link rel="icon" href="images/homer.png">
+    <link rel="stylesheet" href="styles.css">
+    <title>Did They Say It?</title>
+    <meta charset="utf-8">
+</head>
 <body>
     <div>
         <header>
             <h1>Did They Say It?</h1>
         </header>
         <div class="firstPage">
-
+            <!-- Content for the first page goes here -->
         </div>
-        <div id="quoteId">      <!--- use class or id to change pages (like homepage) + images -->
+        <div id="quoteId">      
+            <!-- Content for the quote page goes here -->
             <form>
-                <input type="button"> Yes </button> <!--- do radio buttons -->
-                <input type="button"> No </button>
+                <button type="button">Yes</button>
+                <button type="button">No</button>
             </form>
         </div>
     </div>
+    <script src="quote.json"></script>
     <script src="functions.js"></script>
 </body>
-
 </html>
+
