--- a/project.html
+++ b/project.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="icon" href="images/homer.png">
     <link rel="stylesheet" href="styles.css">
     <title>Did They Say It?</title>
     <meta charset="utf-8">
 </head>
+
 <body>
     <div>
         <header>
             <h1>Did They Say It?</h1>
         </header>
         <div class="firstPage">
-            <!-- Content for the first page goes here -->
+            <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
+            <label for="homer">Homer Simpson</label><br>
+            <input type="image" id="random" name="random" value="random" src="images/kyrie.png">
+            <label for="random">Random<label><br>
+            <input type="image" id="mScott" name="mScott" value="mScott" src="images/mScott.png">
+            <label for="mScott">Michael Scott</label>
         </div>
-        <div id="quoteId">      
+        <div id="quoteId">
             <!-- Content for the quote page goes here -->
             <form>
                 <button type="button">Yes</button>
@@ -25,5 +32,5 @@
     <script src="quote.json"></script>
     <script src="functions.js"></script>
 </body>
-</html>
 
+</html>
