added lil wayne quotes, edited chooseCharacter

--- a/project.html
+++ b/project.html
@@ -14,12 +14,12 @@
             <h1>Did They Say It?</h1>
         </header>
         <div class="firstPage">
-            <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
+         <!--   <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
             <label for="homer">Homer Simpson</label><br>
             <input type="image" id="random" name="random" value="random" src="images/kyrie.png">
             <label for="random">Random<label><br>
             <input type="image" id="mScott" name="mScott" value="mScott" src="images/mScott.png">
-            <label for="mScott">Michael Scott</label>
+            <label for="mScott">Michael Scott</label> -->
         </div>
         <div id="quoteId">
             <!-- Content for the quote page goes here -->
