--- a/project.html
+++ b/project.html
@@ -14,12 +14,14 @@
             <h1>Did They Say It?</h1>
         </header>
         <div class="firstPage">
-         <!--   <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
-            <label for="homer">Homer Simpson</label><br>
-            <input type="image" id="random" name="random" value="random" src="images/kyrie.png">
-            <label for="random">Random<label><br>
-            <input type="image" id="mScott" name="mScott" value="mScott" src="images/mScott.png">
-            <label for="mScott">Michael Scott</label> -->
+            <form>
+                <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
+                <label for="homer">Homer Simpson</label><br>
+                <input type="image" id="wayne" name="wayne" value="wayne" src="images/wayne.png">
+                <label for="wayne">Lil Wayne<label><br>
+                <input type="image" id="mScott" name="mScott" value="mScott" src="images/mScott.png">
+                <label for="mScott">Michael Scott</label>
+            </form>
         </div>
         <div id="quoteId">
             <!-- Content for the quote page goes here -->
