chooseCharacter and answerButton made, loadQuote

--- a/project.html
+++ b/project.html
@@ -14,18 +14,12 @@
             <h1>Did They Say It?</h1>
         </header>
         <div class="firstPage">
-            <form>
-                <input type="image" id="homer" name="homer" value="homer" src="images/homer.png">
-                <label for="homer">Homer Simpson</label><br>
-                <input type="image" id="wayne" name="wayne" value="wayne" src="images/wayne.png">
-                <label for="wayne">Lil Wayne<label><br>
-                <input type="image" id="mScott" name="mScott" value="mScott" src="images/mScott.png">
-                <label for="mScott">Michael Scott</label>
-            </form>
+            
         </div>
         <div id="quoteId">
+            <h2></h2>
             <!-- Content for the quote page goes here -->
-            <form>
+            <form id="YesNo">
                 <button type="button">Yes</button>
                 <button type="button">No</button>
             </form>
