chooseCharacter() and runGame()

--- a/project.html
+++ b/project.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="icon" href="images/homer.png">
+    <link rel="icon" href="images/Homer Simpson.png 1`,0OKIJ">
     <link rel="stylesheet" href="styles.css">
     <title>Did They Say It?</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <div>
+    <div id="container">
         <header>
             <h1>Did They Say It?</h1>
         </header>
