--- a/project.html
+++ b/project.html
@@ -16,14 +16,13 @@
         <div class="firstPage">
             
         </div>
-        <div id="quoteId">
+<!--        <div id="quoteId">
             <h2></h2>
-            <!-- Content for the quote page goes here -->
             <form id="YesNo">
                 <button type="button">Yes</button>
                 <button type="button">No</button>
             </form>
-        </div>
+        </div> -->
     </div>
     <script src="quote.json"></script>
     <script src="functions.js"></script>
