--- a/project.html
+++ b/project.html
@@ -7,17 +7,19 @@
     <title>Did They Say It?</title>
     <meta charset="utf-8">
 </head>
+<section>
 
-<body>
-    <div id="container">
-        <header>
-            <h1>Did They Say It?</h1>
-        </header>
-        <div class="firstPage">
+    <body>
+        <div id="container">
+            <header>
+                <h1>Did They Say It?</h1>
+            </header>
+            <div class="firstPage">
+            </div>
         </div>
-    </div>
-    <script src="quote.json"></script>
-    <script src="functions.js"></script>
-</body>
+        <script src="quote.json"></script>
+        <script src="functions.js"></script>
+    </body>
+</section>
 
 </html>
