transferred quotes into php for server-side

--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" href="images/Homer Simpson.png 1`,0OKIJ">
+    <link rel="icon" href="images/Homer Simpson.png">
     <link rel="stylesheet" href="styles.css">
     <title>Did They Say It?</title>
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
             <div class="firstPage">
             </div>
         </div>
-        <script src="quote.json"></script>
+        <script src="quotes.php"></script>
         <script src="functions.js"></script>
     </body>
 </section>
