storesAnswers, storeQuotes, showQuotes functions

--- a/project.html
+++ b/project.html
@@ -17,6 +17,9 @@
             <div class="firstPage">
             </div>
         </div>
+        <div id="storedQuotes">
+
+        </div>
         <script src="quotes.php"></script>
         <script src="functions.js"></script>
     </body>
